Fix UI of quote so that the cursor doesn't jump

--- a/src/App.scss
+++ b/src/App.scss
@@ -191,7 +191,7 @@ del {
 .quote { 
   color: rgb(116, 129, 141);
   margin: 0px 0px 24px;
-  padding: 0px 0px 0px 12px;
+  padding: 0.4em 0px 0.4em 12px;
   border-left: 4px solid rgb(230, 236, 241);
   border-color: rgb(230, 236, 241);
 }
